# hy

./: .gitignore  Cargo.toml  README.md  bindings.json  blocks.json  build-libs.sh  build-web.sh  go.sh  server_go.sh  test_script.js
assets/: NewModel_Anchors_Armor.bbmodel  NewModel_Anchors_Armor.gltf  index-BGwyYZTi.css  index-DkD-2jaY.js  index.html  index.html_old
blocks/: Cargo.toml
blocks/src/: lib.rs  raycast.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml  index.html
client/src/: assets.rs  audio.rs  camera.rs  context.rs  game_state.rs  lib.rs  net.rs  packet_handlers.rs  socket.rs  transform.rs
client/src/gltf/: mod.rs  test.glb
client/src/render/: cube_vao.rs  debug_renderer.rs  grid_renderer.rs  mod.rs  ssao.rs  vertex.rs
client/src/render/shaders/: grid.frag  grid.vert  line.frag  line.vert  shadow_tri.frag  shadow_tri.vert  skybox.frag  ssao.frag  ssao.vert  ssaoBlur.frag  ssaoCombine.frag  tonemapping.frag  tonemapping.vert  tri.frag  tri.vert
client/src/render/skybox/: mod.rs
client/src/render/tonemapping/: mod.rs
client/ui/: index.html  main.css  main.js  package-lock.json  tsconfig.json
client/ui/src/: App.css  App.tsx  AudioPlayer.tsx  BlockButton.tsx  BlockList.tsx  CtfGameUi.tsx  DebugAudio.tsx  Editor.tsx  EntityTypeList.tsx  LeftBar.tsx  RightBar.tsx  TopBar.tsx  index.css
docs/source/: conf.py  index.rst
docs/source/ref/: glossary.rst
docs/source/tutorial/: blocks.rst  capture-the-flag.rst  entities.rst  getting-started.rst
entities/: Cargo.toml
entities/src/: lib.rs
game_data/: blocks.json
js/player/: Cargo.toml
js/player/src/: lib.rs
kibble_ctf/: ball.gltf  bandage.gltf  block_types.json  blocks.json  blue_flag.bbmodel  blue_flag.gltf  bolter.gltf  box.gltf  bullet.gltf  entities.json  entity_types.json  gun.gltf  package-lock.json  player.js  player.ts  player.tsx  player_red.gltf  red_flag.bbmodel  red_flag.gltf  test_entity.gltf  test_entity_alt.gltf  tsconfig.json
kibble_ctf/lib/: hy.d.ts  player.d.ts  player.js  player_bg.js  player_bg.wasm  player_bg.wasm.d.ts
kibble_ctf/src/: ammo.ts  ball.ts  bullet.ts  flag.ts  gun.ts  player.ts  shotgun.ts  test_entity.ts  world.ts
net/: Cargo.toml
net-types/: Cargo.toml
net-types/src/: lib.rs
net/src/: lib.rs
physics/: Cargo.toml
physics/src/: lib.rs
server/: Cargo.toml
server/src/: game_server.rs  http.rs  js.rs  main.rs
server/src/game/: editor_instance.rs  game_instance.rs  level.rs  mod.rs  network.rs  player.rs  world.rs
server/src/js/: extensions.rs  mod.rs  player.rs  runtime.js
util/: Cargo.toml
util/src/: frame_timer.rs  lib.rs
