[workspace]
members = ["cli", "client", "net", "server"]
resolver = "2"

[workspace.dependencies]
glow = { version = "0.15" }
web-sys = { version = "0.3.72", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "EventTarget",
    "KeyboardEvent",
    "WebSocket",
    "MessageEvent",
    "Blob",
    "console",
] }
wasm-bindgen = "0.2"
bytemuck = { version = "1.9.1", features = ["derive"] }
futures-util = "0.3.31"
glam = { version = "0.29", features = ["bytemuck", "serde"] }
gltf = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
itertools = "0.13"
webbrowser = "1.0.2"
tokio = { version = "1.4.1", features = ["full"] }
tokio-tungstenite = "0.24.0"
anyhow = "1.0"
deno_core = "0.317.0"
tracing = "0.1.40"
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"
tracing-subscriber = "0.3.18"
bincode = "1.3.3"
serde = { version = "1.0.214", features = ["derive"] }
wasm-bindgen-futures = "0.4.45"
crossbeam = "0.8.4"
derive_more = { version = "1.0.0", features = ["from"] }

net.path = "net"