[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
anyhow.workspace = true
glow = { workspace = true }
wasm-bindgen.workspace = true
itertools.workspace = true
glam.workspace = true
web-sys.workspace = true
gltf.workspace = true
bytemuck.workspace = true
image.workspace = true
