[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
glow = { workspace = true }
wasm-bindgen.workspace = true
itertools.workspace = true
glam.workspace = true
web-sys.workspace = true
gltf.workspace = true
bytemuck.workspace = true
image.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true
console_error_panic_hook.workspace = true
bincode.workspace = true
wasm-bindgen-futures.workspace = true
dolly.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
gloo-net.workspace = true

net-types.workspace = true
blocks.workspace = true
entities.workspace = true
