[package]
name = "server"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webbrowser.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true
anyhow.workspace = true
deno_core.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
glam.workspace = true
bincode.workspace = true
crossbeam.workspace = true
serde_json.workspace = true
serde.workspace = true
tsify.workspace = true
wasm-bindgen.workspace = true

net-types.workspace = true
blocks.workspace = true
physics.workspace = true
entities.workspace = true

[dependencies]
